create myprofile page - fix confirmpages

--- a/confirmbokaaterkommande.html
+++ b/confirmbokaaterkommande.html
@@ -59,7 +59,7 @@
                             <span>2025-12-31</span>
                         </div>
                         <div class="flex-time">
-                            <span class="fa-solid fa-clock"></span><span>Nu</span>
+                            <span class="fa-solid fa-clock"></span><span>10:00</span>
                         </div>
                     </div>
                     <div class="confirm-address">
