--- a/confirmbokaresa.html
+++ b/confirmbokaresa.html
@@ -85,7 +85,7 @@
 
                 <div class="confirm-buttons-big">
                     <div class="container-confirm-trip">
-                        <a href="confirmedbokaaterkommande.html" class="purple-button">Bekräfta bokning</a>
+                        <a href="confirmedbokaresa.html" class="purple-button">Bekräfta bokning</a>
                     </div>
                     <div class="container-back">
                         <a href="bokaaterkommande.html" class="purple-button"><span
