--- a/about.html
+++ b/about.html
@@ -61,9 +61,16 @@
     <h2 class="page-title">Solna Färdtjänst</h2>
     <main>
         <div class="vertical-center">
-            <picture>
-                <img src="" alt="">
-            </picture>
+            <div class="container-images2">
+                <picture class="imgthree">
+                    <source media="(min-width: 1200px)" srcset="images/wheelchair2_1000.webp" width="1000" height="667"
+                        type="image/webp">
+                    <source media="(max-width: 799px)" srcset="images/wheelchair2_799.webp" width="799" height="533"
+                        type="image/webp">
+                    <img class="imgabout" src="images/wheelchair2_1000.jpg"
+                        alt="man i rullstol på ramp till färdtjänstbuss" width="1000" height="677">
+                </picture>
+            </div>
             <section>
                 <h2 class="heading-hidden">Solna Färdtjänst</h2>
                 <p>
