--- a/index.html
+++ b/index.html
@@ -51,12 +51,6 @@
         </div>
     </div>
     <div class="container-breadcrums vertical-center">
-        <nav class="breadcrums">
-            <ol>
-                <li><a href=""></a></li>
-                <li></li>
-            </ol>
-        </nav>
     </div>
     <h2 class="page-title">Solna Färdtjänst</h2>
     <main>
@@ -71,9 +65,18 @@
                     <a href="logon.html" class="blue-button">Boka resa</a>
                 </div>
             </section>
-            <picture>
-                <img src="" alt="">
-            </picture>
+            <div class="container-images">
+                <picture class="imgone">
+                    <source media="(min-width: 1200px)" srcset="images/wheelchair_500.webp" width="500" height="333" type="image/webp">
+                    <source media="(max-width: 1199px)" srcset="images/wheelchair_300.webp" width="300" height="200" type="image/webp">
+                    <img class="img015index" src="images/wheelchair_500.jpg" alt="man i rullstol på ramp till färdtjänstbuss" width="500" height="333">
+                </picture>
+                <picture class="imgtwo">
+                    <source media="(min-width: 1200px)" srcset="images/wheelchair2_500.webp" width="500" height="333" type="image/webp">
+                    <source media="(max-width: 1199px)" srcset="images/wheelchair2_300.webp" width="300" height="200" type="image/webp">
+                    <img class="img007index" src="images/wheelchair2_500.jpg" alt="man i rullstol på ramp till färdtjänstbuss" width="500" height="333">
+                </picture>
+            </div>
             <section>
                 <div class="heading">
                     <h2 class="h2-font">Vad är färdtjänst?</h2>
