--- a/about.html
+++ b/about.html
@@ -79,7 +79,9 @@
                 </p>
             </section>
 
-            <blockquote>Citat här av Tore Nordin</blockquote>
+            <div class="quote">
+            <blockquote>"En hemnära färdtjänst"<br>- Tore Nordin</blockquote>
+            </div>
         </div>
     </main>
     <footer>
