--- a/myprofile.html
+++ b/myprofile.html
@@ -96,11 +96,27 @@
                     <div class="form-myprofile-carddate">
                         <label for="myprofile-carddate">Giltighetstid</label><br>
                         <div class="input-text-icon">
-                            <input type="text" id="myprofile-carddate" name="myprofile-carddate" placeholder="2028-12-25">
+                            <input type="text" id="myprofile-carddate" name="myprofile-carddate"
+                                placeholder="2028-12-25">
                         </div>
                     </div>
+                    <div class="form-myprofile-ledsagare">
+                        <fieldset>
+                            <legend>Ledsagare</legend>
+
+                            <div>
+                                <input type="checkbox" id="yes" name="yes">
+                                <label for="yes">Ja</label>
+                            </div>
+
+                            <div>
+                                <input type="checkbox" id="no" name="no" checked="true">
+                                <label for="no">Nej</label>
+                            </div>
+                        </fieldset>
+                    </div>
                     <div class="container-submit-contact">
-                        <a href="contactformconfirm.html" class="purple-button">Skicka</a>
+                        <a href="myprofile.html" class="purple-button">Ändra</a>
                     </div>
                 </div>
             </section>
