style section ul ol

--- a/logon.html
+++ b/logon.html
@@ -91,7 +91,7 @@
                 <p>När du har fått beviljad färdtjänst och ditt färdtjänstkort kan du enkel skapa ett konto. Se till att
                     ha ditt färdtjänstkort tillgängligt.</p>
                 <div class="account-button">
-                    <a href="#" class="blue-button">Skapa konto</a>
+                    <a href="logon.html" class="blue-button">Skapa konto</a>
                 </div>
             </section>
         </div>
