fix title on button, indentera

--- a/confirmbokaaterkommande.html
+++ b/confirmbokaaterkommande.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
     <title>Kontrollera uppgifter - Solna färdtjänst</title>
 </head>
+
 <body>
     <header>
         <div class="main-header vertical-center">
@@ -85,7 +86,8 @@
                         <a href="confirmedbokaaterkommande.html" class="purple-button">Bekräfta bokning</a>
                     </div>
                     <div class="container-back">
-                        <a href="bokaaterkommande.html" class="purple-button"><span class="fa-solid fa-circle-arrow-left"></span> Tillbaka</a>
+                        <a href="bokaaterkommande.html" class="purple-button"><span
+                                class="fa-solid fa-circle-arrow-left"></span> Tillbaka</a>
                     </div>
                 </div>
             </div>
