--- a/confirmedbokaaterkommande.html
+++ b/confirmedbokaaterkommande.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
     <title>Bokningsbekräftelse - Solna färdtjänst</title>
 </head>
+
 <body>
     <header>
         <div class="main-header vertical-center">
@@ -49,7 +50,7 @@
         </div>
     </div>
     <h2 class="page-title">Bokningsbekräftelse</h2>
-        <main class="kommanderesor-page">
+    <main class="kommanderesor-page">
         <div class="vertical-center">
             <div class="kommande-resa">
                 <div class="confirmation-info">
@@ -75,8 +76,9 @@
                             <span class="text">Veckodag: Måndag, tisdag</span><br><br>
                             <span class="text">Slutdatum: 2026-02-08</span><br><br>
                             <span class="text">Medresenärer: 0</span><br>
-                        <span class="text">Övrig information</span><br><br><br><br><br><br><br>
-                        <span class="text-aterkommande">Du kan se dina resor under Mina kommande resor</span><br><br>
+                            <span class="text">Övrig information</span><br><br><br><br><br><br><br>
+                            <span class="text-aterkommande">Du kan se dina resor under Mina kommande
+                                resor</span><br><br>
                         </div>
                     </div>
                 </div>
@@ -104,9 +106,12 @@
             </div>
             <div class="socialmedia-links">
                 <ul>
-                    <li><a href="www.instagram.com" title="Instagram"><span class="fa-brands fa-instagram"></span></a></li>
-                    <li><a href="www.facebook.com" title="Facebook"><span class="fa-brands fa-square-facebook"></span></a></li>
-                    <li><a href="www.linkedin.com" title="Linkedin"><span class="fa-brands fa-square-linkedin"></span></a></li>
+                    <li><a href="www.instagram.com" title="Instagram"><span class="fa-brands fa-instagram"></span></a>
+                    </li>
+                    <li><a href="www.facebook.com" title="Facebook"><span
+                                class="fa-brands fa-square-facebook"></span></a></li>
+                    <li><a href="www.linkedin.com" title="Linkedin"><span
+                                class="fa-brands fa-square-linkedin"></span></a></li>
                 </ul>
             </div>
         </div>
