--- a/contact.html
+++ b/contact.html
@@ -44,11 +44,12 @@
         </div>
     </div>
     <div class="vertical-center">
-    <div class="search-wrapper">
-        <label for="search">Sök</label>
-        <input type="text" id="search" name="search">
-        <button id="search-button"><span id="icon-search" class="fa-solid fa-magnifying-glass"></span></button>
-    </div>
+        <div class="search-wrapper">
+            <label for="search">Sök</label>
+            <input type="text" id="search" name="search">
+            <button id="search-button" title="sök"><span id="icon-search"
+                    class="fa-solid fa-magnifying-glass"></span></button>
+        </div>
     </div>
     <div class="container-breadcrums vertical-center">
         <nav class="breadcrums">
@@ -69,12 +70,13 @@
                 </p>
             </section>
             <div class="contact-buttons">
-            <div class="container-call-button">
-                <a href="tel:08-1234567" class="blue-button"><span class="fa-solid fa-phone"></span> Ring oss</a>
-            </div>
-            <div class="container-email-button">
-                <a href="mailto:hali2507@student.miun.se" class="blue-button"><span class="fa-solid fa-envelope"></span> Maila oss</a>
-            </div>
+                <div class="container-call-button">
+                    <a href="tel:08-1234567" class="blue-button"><span class="fa-solid fa-phone"></span> Ring oss</a>
+                </div>
+                <div class="container-email-button">
+                    <a href="mailto:hali2507@student.miun.se" class="blue-button"><span
+                            class="fa-solid fa-envelope"></span> Maila oss</a>
+                </div>
             </div>
         </div>
     </main>
