--- a/fungerarfardtjanst.html
+++ b/fungerarfardtjanst.html
@@ -47,7 +47,8 @@
         <div class="search-wrapper">
             <label for="search">Sök</label>
             <input type="text" id="search" name="search">
-            <button id="search-button"><span id="icon-search" class="fa-solid fa-magnifying-glass"></span></button>
+            <button id="search-button" title="sök"><span id="icon-search"
+                    class="fa-solid fa-magnifying-glass"></span></button>
         </div>
     </div>
     <div class="container-breadcrums vertical-center">
@@ -74,9 +75,10 @@
                     Här kan du läsa om vad som krävs för att få färdtjänst och vad som inte är tillräckliga skäl.
                 </p>
                 <h3>Vad krävs för att få tillstånd till färdtjänst?</h3>
-                    <p>För att få tillstånd till färdtjänst finns krav som måste uppfyllas. Kraven kan se olika ut i respektive kommun.</p>
+                <p>För att få tillstånd till färdtjänst finns krav som måste uppfyllas. Kraven kan se olika ut i
+                    respektive kommun.</p>
                 <h4>För att uppfylla kraven behöver du</h4>
-                    <ul class="unorderedlist-page">
+                <ul class="unorderedlist-page">
                     <li>vara folkbokförd i en kommun i Stockholms län,</li>
                     <li>ha en funktionsnedsättning som varar i mer än 3 månader,</li>
                     <li>ha stora svårigheter att förflytta dig på egen hand eller att resa med kollektivtrafiken.</li>
