--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="search-wrapper">
             <label for="search">Sök</label>
             <input type="text" id="search" name="search">
-            <button id="search-button"><span id="icon-search" class="fa-solid fa-magnifying-glass"></span></button>
+            <button id="search-button" title="sök"><span id="icon-search" class="fa-solid fa-magnifying-glass"></span></button>
         </div>
     </div>
     <div class="container-breadcrums vertical-center">
@@ -69,7 +69,7 @@
                 <picture class="imgone">
                     <source media="(min-width: 1200px)" srcset="images/wheelchair_500.webp" width="500" height="333" type="image/webp">
                     <source media="(max-width: 1199px)" srcset="images/wheelchair_300.webp" width="300" height="200" type="image/webp">
-                    <img class="img015index" src="images/wheelchair_500.jpg" alt="man i rullstol på ramp till färdtjänstbuss" width="500" height="333">
+                    <img class="img015index" src="images/wheelchair_500.jpg" alt="man i rullstol på ramp till färdtjänstbuss får hjälp av chauffören" width="500" height="333">
                 </picture>
                 <picture class="imgtwo">
                     <source media="(min-width: 1200px)" srcset="images/wheelchair2_500.webp" width="500" height="333" type="image/webp">
