--- a/mypages.html
+++ b/mypages.html
@@ -57,7 +57,7 @@
                 <a href="bokaresa.html" class="purple-button">Boka resa</a>
             </div>
             <div class="container-boka-aterkommande">
-                <a href="bokaaterkommande.html"  class="purple-button">Boka återkommande resa</a>
+                <a href="bokaaterkommande.html" class="purple-button">Boka återkommande resa</a>
             </div>
             <div class="container-mina-resor">
                 <a href="kommanderesor.html" class="purple-button">Mina kommande resor</a>
@@ -85,9 +85,12 @@
             </div>
             <div class="socialmedia-links">
                 <ul>
-                    <li><a href="www.instagram.com" title="Instagram"><span class="fa-brands fa-instagram"></span></a></li>
-                    <li><a href="www.facebook.com" title="Facebook"><span class="fa-brands fa-square-facebook"></span></a></li>
-                    <li><a href="www.linkedin.com" title="Linkedin"><span class="fa-brands fa-square-linkedin"></span></a></li>
+                    <li><a href="www.instagram.com" title="Instagram"><span class="fa-brands fa-instagram"></span></a>
+                    </li>
+                    <li><a href="www.facebook.com" title="Facebook"><span
+                                class="fa-brands fa-square-facebook"></span></a></li>
+                    <li><a href="www.linkedin.com" title="Linkedin"><span
+                                class="fa-brands fa-square-linkedin"></span></a></li>
                 </ul>
             </div>
         </div>
