--- a/reglerfardtjanst.html
+++ b/reglerfardtjanst.html
@@ -47,7 +47,8 @@
         <div class="search-wrapper">
             <label for="search">Sök</label>
             <input type="text" id="search" name="search">
-            <button id="search-button"><span id="icon-search" class="fa-solid fa-magnifying-glass"></span></button>
+            <button id="search-button" title="sök"><span id="icon-search"
+                    class="fa-solid fa-magnifying-glass"></span></button>
         </div>
     </div>
     <div class="container-breadcrums vertical-center">
@@ -74,7 +75,7 @@
                     inte följer reglerna kan vi begränsa hur du får beställa resor. Vi kan till och med dra in ditt
                     tillstånd till färdtjänst om du gör allvarliga fel.</p>
 
-                    <h3>Du som har färdtjänst måste</h3>
+                <h3>Du som har färdtjänst måste</h3>
                 <ul class="unorderedlist-page">
                     <li>vara på plats för att bli hämtad på överenskommen tid</li>
                     <li>följa förarens rekommendationer om att resa på ett säkert sätt</li>
@@ -87,7 +88,7 @@
                     Du ansvarar för att höra av dig till oss om något händer som påverkar ditt tillstånd till
                     färdtjänst eller dina färdtjänstresor.</p>
 
-                    <h3>Du måste tala om för oss om du</h3>
+                <h3>Du måste tala om för oss om du</h3>
                 <ul class="unorderedlist-page">
                     <li>inte längre behöver färdtjänst</li>
                     <li>inte längre har behov av extra resor, till exempel till arbete eller studier</li>
