--- a/about.html
+++ b/about.html
@@ -47,7 +47,8 @@
         <div class="search-wrapper">
             <label for="search">Sök</label>
             <input type="text" id="search" name="search">
-            <button id="search-button"><span id="icon-search" class="fa-solid fa-magnifying-glass"></span></button>
+            <button id="search-button" title="sök"><span id="icon-search"
+                    class="fa-solid fa-magnifying-glass"></span></button>
         </div>
     </div>
     <div class="container-breadcrums vertical-center">
@@ -80,7 +81,7 @@
             </section>
 
             <div class="quote">
-            <blockquote>"En hemnära färdtjänst"<br>- Tore Nordin</blockquote>
+                <blockquote>"En hemnära färdtjänst"<br>- Tore Nordin</blockquote>
             </div>
         </div>
     </main>
