--- a/confirmedbokaresa.html
+++ b/confirmedbokaresa.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
     <title>Bokningsbekräftelse - Solna färdtjänst</title>
 </head>
+
 <body>
     <header>
         <div class="main-header vertical-center">
@@ -106,9 +107,12 @@
             </div>
             <div class="socialmedia-links">
                 <ul>
-                    <li><a href="www.instagram.com" title="Instagram"><span class="fa-brands fa-instagram"></span></a></li>
-                    <li><a href="www.facebook.com" title="Facebook"><span class="fa-brands fa-square-facebook"></span></a></li>
-                    <li><a href="www.linkedin.com" title="Linkedin"><span class="fa-brands fa-square-linkedin"></span></a></li>
+                    <li><a href="www.instagram.com" title="Instagram"><span class="fa-brands fa-instagram"></span></a>
+                    </li>
+                    <li><a href="www.facebook.com" title="Facebook"><span
+                                class="fa-brands fa-square-facebook"></span></a></li>
+                    <li><a href="www.linkedin.com" title="Linkedin"><span
+                                class="fa-brands fa-square-linkedin"></span></a></li>
                 </ul>
             </div>
         </div>
