--- a/logon.html
+++ b/logon.html
@@ -47,7 +47,8 @@
         <div class="search-wrapper">
             <label for="search">Sök</label>
             <input type="text" id="search" name="search">
-            <button id="search-button"><span id="icon-search" class="fa-solid fa-magnifying-glass"></span></button>
+            <button id="search-button" title="sök"><span id="icon-search"
+                    class="fa-solid fa-magnifying-glass"></span></button>
         </div>
     </div>
     <div class="container-breadcrums vertical-center">
