fix validation error myprofile

--- a/myprofile.html
+++ b/myprofile.html
@@ -70,7 +70,7 @@
                     <div class="form-myprofile-address">
                         <label for="myprofile-address">Adress</label><br>
                         <div class="input-text-icon">
-                            <input type="text" id="myprofile-adress" name="myprofile-adress"
+                            <input type="text" id="myprofile-address" name="myprofile-address"
                                 placeholder="Ingentingvägen 1, 17155 Solna">
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                             </div>
 
                             <div>
-                                <input type="checkbox" id="no" name="no" checked="true">
+                                <input type="checkbox" id="no" name="no" checked>
                                 <label for="no">Nej</label>
                             </div>
                         </fieldset>
