--- a/bokaresa.html
+++ b/bokaresa.html
@@ -56,12 +56,15 @@
                 <h2 class="heading-hidden">Boka din resa här</h2>
                 <div class="form-veichle">
                     <div class="veichle">
-                        <input type="radio" id="taxi" name="veichle" value="Färdtjänsttaxi">
-                        <label for="taxi">Färdtjänsttaxi</label><br>
-                        <input type="radio" id="wheelchair" name="veichle" value="Rullstolstaxi">
-                        <label for="wheelchair">Rullstolstaxi</label><br>
-                        <input type="radio" id="stretcher" name="veichle" value="Bårtaxi">
-                        <label for="stretcher">Bårtaxi</label>
+                        <fieldset>
+                            <legend>Val av fordon</legend>
+                            <input type="radio" id="taxi" name="veichle" value="Färdtjänsttaxi">
+                            <label for="taxi">Färdtjänsttaxi</label><br>
+                            <input type="radio" id="wheelchair" name="veichle" value="Rullstolstaxi">
+                            <label for="wheelchair">Rullstolstaxi</label><br>
+                            <input type="radio" id="stretcher" name="veichle" value="Bårtaxi">
+                            <label for="stretcher">Bårtaxi</label>
+                        </fieldset>
                     </div>
                 </div>
                 <div class="form-trip-from">
