change line-height + background mypages

--- a/mypages.html
+++ b/mypages.html
@@ -53,6 +53,8 @@
     <h3>Vad vill du göra idag?</h3>
     <main class="main-mypages">
         <div class="vertical-center">
+            <section>
+                <h2 class="hidden-label">Alternativ</h2>
             <div class="container-boka-resa">
                 <a href="bokaresa.html" class="purple-button">Boka resa</a>
             </div>
@@ -68,6 +70,7 @@
             <div class="container-logout">
                 <a href="logon.html" class="purple-button">Logga ut</a>
             </div>
+            </section>
         </div>
     </main>
     <footer>
