change wrong link

--- a/confirmbokaresa.html
+++ b/confirmbokaresa.html
@@ -72,9 +72,6 @@
                             <span class="fa-solid fa-car"></span><span class="text"> Rullstolstaxi</span>
                         </div>
                         <div class="confirm-others">
-                            <br><span class="text">Hur ofta: Varannan vecka</span><br>
-                            <span class="text">Veckodag: Måndag, tisdag</span><br><br>
-                            <span class="text">Slutdatum: 2026-02-08</span><br><br>
                             <span class="text">Medresenärer: 0</span><br>
                             <span class="text">Övrig information</span><br><br><br>
                             <span class="text">Returresa: Ingen returresa</span><br><br>
@@ -89,7 +86,7 @@
                         <a href="confirmedbokaresa.html" class="purple-button">Bekräfta bokning</a>
                     </div>
                     <div class="container-back">
-                        <a href="bokaaterkommande.html" class="purple-button"><span
+                        <a href="bokaresa.html" class="purple-button"><span
                                 class="fa-solid fa-circle-arrow-left"></span> Tillbaka</a>
                     </div>
                 </div>
