--- a/confirmbokaresa.html
+++ b/confirmbokaresa.html
@@ -28,7 +28,7 @@
                 <a href="javascript:void(0);" class="icon-menu" title="ikon för mobilnavigering">
                     <span id="icon-menu" class="fa-solid fa-bars" aria-hidden="true"></span>
                 </a>
-                <div class="user">
+                <div class="user purple">
                     <a href="myprofile.html"><span id="icon-user" class="fa-solid fa-user"></span> Min profil</a>
                 </div>
             </div>
