create contact form button

--- a/contact.html
+++ b/contact.html
@@ -71,6 +71,9 @@
             </section>
             <div class="contact-buttons">
                 <div class="container-call-button">
+                    <a href="contactform.html" class="blue-button"><span class="fa-regular fa-pen-to-square"></span> Kontaktformulär</a>
+                </div>
+                <div class="container-call-button">
                     <a href="tel:08-1234567" class="blue-button"><span class="fa-solid fa-phone"></span> Ring oss</a>
                 </div>
                 <div class="container-email-button">
