--- a/logon.html
+++ b/logon.html
@@ -71,7 +71,7 @@
                     </div>
                     <label for="password">Lösenord</label><br>
                     <div class="input-text-logon">
-                        <input type="text" id="password" name="password"><br><br>
+                        <input type="password" id="password" name="password"><br><br>
                     </div>
                     <div class="logon-buttons">
                         <div class="user-logon">
